--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <title>Путешествие по России</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
-<body>
-  <div class="page">
-  	<header class="header">
+<body class="page">
+   	<header class="header">
   	  <img class="header__logo" src="./images/header-logo.svg" alt="Россия">
 	    <a href="#" class="header__lang-link">RU</a>
 	    <a href="#" class="header__lang-link">EN</a>
@@ -153,6 +152,5 @@
         <a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a>
       <div class="footer__copyright">&copy; 2021. Чухонина Надежда</div>
 	  </footer>	 
-  </div>
-</body>
+  </body>
 </html>
