--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <main class="content">
 	  <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
-  	  <p class="lead__subtitle">Настоящая страна не в выпусках<br> 
-          новостей, а здесь.</p>
+  	  <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
   	  <img class="lead__image" src="./images/lead-polka.jpg" alt="поезд">
   	  <p class="lead__caption">ВАША ПОЛКА - ВЕРХНЯЯ</p>
 	  </section>
@@ -136,16 +135,16 @@
           тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими 
           когтями. Чтобы все знали, кто тут хозяин.</p>				
 			</article>				
-	  </section>
+	  </section>  
+    <section class="cover">    
+      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__background">
+        <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
+        <p class="cover__subtitle">По мотивам учебной темы
+          о Транссибе — путешествие от столицы до Байкала на электричках.</p> 
+        <div class="cover__overlay"></div>
+      </a>	  
+    </section>	
   </main>
-  <section class="cover">    
-    <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__background">
-      <h2 class="cover__title">До Байкала<br> «на собаках»</h2>
-      <p class="cover__subtitle">По мотивам учебной темы
-        о Транссибе — путешествие от столицы до Байкала на электричках.</p> 
-      <div class="cover__overlay"></div>
-    </a>	  
-  </section>	
 	<footer class="footer">
       <a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a>
       <a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a>
