--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body class="page">
 	<header class="header">
     <img class="header__logo" src="./images/header-logo.svg" alt="Россия">
-	  <a href="#" class="header__lang-link">RU</a>
-	  <a href="#" class="header__lang-link">EN</a>
+	  <div class="header__lang-links">
+      <a href="#" class="header__lang-link header__lang-link_active_enabled">Ru</a>
+      <a href="#" class="header__lang-link header__lang-link_active_disabled">En</a>
+    </div>
   </header>
   <main class="content">
 	  <section class="lead">
@@ -30,11 +32,11 @@
         усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. 
         Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
 	    <ul class="intro__list">
-        <li>Часовых поясов 11</li>
-        <li>Объектов природного наследия ЮНЕСКО 12</li>
-        <li>Объектов культурного наследия ЮНЕСКО 16</li>
-        <li>Природных заповедников 105</li>
-        <li>Аэропортов 241</li>
+        <li>Часовых поясов <span class="intro__list_accent">11</span></li>
+        <li>Объектов природного наследия ЮНЕСКО <span class="intro__list_accent">12</span></li>
+        <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list_accent">16</span></li>
+        <li>Природных заповедников <span class="intro__list_accent">105</span></li>
+        <li>Аэропортов <span class="intro__list_accent">241</span></li>
       </ul>
 	  </section>	  
 	  <section class="photo-grid">
@@ -71,9 +73,9 @@
 			  <h2 class="place__title">Кольский</h2>
 			  <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский полуостров">
 			  <div class="place__website">
-			  <p class="place__website place__website_url-heading">URL</p>
+			  <p class="place__url-heading">URL</p>
 			  <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" 
-            class="place__website place__website_link" target="_blank">National Geographic</a>
+            class="place__link" target="_blank">National Geographic</a>
 			  </div>
 			  <div>
           <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
@@ -146,12 +148,14 @@
     </section>	
   </main>
 	<footer class="footer">
+    <nav>
       <a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a>
       <a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a>
       <a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a>
       <a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a>
       <a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a>
-    <div class="footer__copyright">&copy; 2021. Чухонина Надежда</div>
+    </nav>
+    <p class="footer__copyright">&copy; 2021. Чухонина Надежда</p>
 	</footer>	 
 </body>
 </html>
