--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
       </ul>
     </section>	  
     <section class="photo-grid">
-      <img class="photo-grid__item" src="./images/photo-grid-train.png" alt="поезд">
-      <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.png" alt="горы">
-      <img class="photo-grid__item" src="./images/photo-grid-tuman.png" alt="туман">
-      <img class="photo-grid__item" src="./images/photo-grid-sochi.png" alt="туманный лес">
+      <img class="photo-grid__item" src="./images/photo-grid-train.png" alt="вид из окна поезда">
+      <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.png" alt="горные вершины в облаках">
+      <img class="photo-grid__item" src="./images/photo-grid-tuman.png" alt="рассветный туман над полем">
+      <img class="photo-grid__item" src="./images/photo-grid-sochi.png" alt="туманный лесной склон">
       <img class="photo-grid__item" src="./images/photo-grid-arisa.png" alt="лёд">
-      <img class="photo-grid__item" src="./images/photo-grid-baikal.png" alt="Байкал">
+      <img class="photo-grid__item" src="./images/photo-grid-baikal.png" alt="берег Байкала">
       <img class="photo-grid__item" src="./images/photo-grid-elbrus.png" alt="Эльбрус">
       <img class="photo-grid__item" src="./images/photo-grid-kondratiev.png" alt="Балтийск">
       <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.png" alt="Камчатка">
@@ -61,13 +61,15 @@
          <p class="place__website place__website_url-heading">URL</p>
          <a href="http://park-kosa.ru" class="place__website place__website_link" target="_blank">park-kosa.ru</a>
         </div>
-        <div><p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны 
+        <div class="place__text">
+          <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны 
           и подёрнутого рябью волн Балтийского моря 
           с другой. Уникальная природная зона на краю российского анклава.</p>
           <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника 
           и исследователя там же по соседству — самая западная точка России, Балтийская коса, — 
           и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы 
-          и запах стального, прохладного моря.</p></div>
+          и запах стального, прохладного моря.</p>
+        </div>
       </article>
       <article class="place">
         <h2 class="place__title">Кольский</h2>
@@ -75,9 +77,9 @@
         <div class="place__website">
         <p class="place__url-heading">URL</p>
         <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" 
-            class="place__link" target="_blank">National Geographic</a>
+            class="place__website place__website_link" target="_blank">National Geographic</a>
         </div>
-        <div>
+        <div class="place__text">
           <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
           тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
           <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля 
@@ -94,7 +96,7 @@
           <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" 
             class="place__website place__website_link" target="_blank">Facebook</a>
         </div>
-        <div>
+        <div class="place__text">
           <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
             В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете 
             в автомобиле окна, сможете познакомиться 
@@ -110,7 +112,7 @@
           <p class="place__website place__website_url-heading">URL</p>
           <a href="https://vk.com/baikalmile" class="place__website place__website_link" target="_blank">https://vk.com/baikalmile</a>
         </div>
-        <div>
+        <div class="place__text">
           <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
             в мире. Многие также знают, что это самый большой источник пресной воды и одно 
             из красивейших мест в России.</p>
@@ -149,11 +151,13 @@
   </main>
   <footer class="footer">
     <nav>
-      <a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a>
-      <a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a>
-      <a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a>
-      <a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a>
-      <a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a>
+      <ul class="footer__links">
+        <li><a href="https://yandex.ru/maps" target="_blank" class="footer__link">Карты</a></li>
+        <li><a href="https://yandex.ru/pogoda" target="_blank" class="footer__link">Погода</a></li>
+        <li><a href="https://rasp.yandex.ru" target="_blank" class="footer__link">Расписание</a></li>
+        <li><a href="https://calendar.yandex.ru" target="_blank" class="footer__link">Календарь</a></li>
+        <li><a href="https://travel.yandex.ru" target="_blank" class="footer__link">Путешествия</a></li>
+      </ul>
     </nav>
     <p class="footer__copyright">&copy; 2021. Чухонина Надежда</p>
   </footer>	 
