--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-      <img class="lead__image" src="./images/lead-polka.jpg" alt="поезд">
-      <p class="lead__caption">ВАША ПОЛКА - ВЕРХНЯЯ</p>
+      <img class="lead__image" src="./images/lead-polka.jpg" alt="поезд, боковая полка">
+      <p class="lead__caption">ваша полка - верхняя</p>
     </section>
     <section class="intro">
       <h2 class="intro__title">Чего мы там не видели?</h2>
