ПР3__КР1__03.01_ОЕд

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </section>	  
     <section class="photo-grid">
       <img class="photo-grid__item" src="./images/photo-grid-train.png" alt="вид из окна поезда">
-      <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.png" alt="горные вершины в облаках">
+      <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.png" alt="облака над горой">
       <img class="photo-grid__item" src="./images/photo-grid-tuman.png" alt="рассветный туман над полем">
       <img class="photo-grid__item" src="./images/photo-grid-sochi.png" alt="туманный лесной склон">
       <img class="photo-grid__item" src="./images/photo-grid-arisa.png" alt="лёд">
@@ -144,8 +144,7 @@
       <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__background">
         <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы
-          о Транссибе — путешествие от столицы до Байкала на электричках.</p> 
-        <div class="cover__overlay"></div>
+          о Транссибе — путешествие от столицы до Байкала на электричках.</p>         
       </a>	  
     </section>	
   </main>
