--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <header class="header">
     <img class="header__logo" src="./images/header-logo.svg" alt="Россия">
     <div class="header__lang-links">
-      <a href="#" class="header__lang-link header__lang-link_active_enabled">Ru</a>
-      <a href="#" class="header__lang-link header__lang-link_active_disabled">En</a>
+      <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
+      <a href="#" class="header__lang-link">En</a>
     </div>
   </header>
   <main class="content">
@@ -127,8 +127,8 @@
         <h2 class="place__title">Карелия</h2>
         <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия">
         <div class="place__website">
-          <p class="place__website place__website_url-heading">URL</p>
-          <a href="http://vodlozero.ru" class="place__website place__website_link" target="_blank">http://vodlozero.ru/</a>
+          <p class="place__website_url-heading">URL</p>
+          <a href="http://vodlozero.ru" class="place__website_link" target="_blank">http://vodlozero.ru/</a>
         </div>
           <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: 
             образующая тайгу сибирская лиственница не растёт западнее Водлозера. 
