--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <h2 class="place__title">Куршская коса</h2>
         <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
         <div class="place__website">
-         <p class="place__website place__website_url-heading">URL</p>
-         <a href="http://park-kosa.ru" class="place__website place__website_link" target="_blank">park-kosa.ru</a>
+         <p class="place__url-heading">URL</p>
+         <a href="http://park-kosa.ru" class="place__link" target="_blank">park-kosa.ru</a>
         </div>
         <div class="place__text">
           <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны 
@@ -77,7 +77,7 @@
         <div class="place__website">
         <p class="place__url-heading">URL</p>
         <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" 
-            class="place__website place__website_link" target="_blank">National Geographic</a>
+            class="place__link" target="_blank">National Geographic</a>
         </div>
         <div class="place__text">
           <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
@@ -92,9 +92,9 @@
         <h2 class="place__title">Алтай</h2>
         <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
         <div class="place__website">
-          <p class="place__website place__website_url-heading">URL</p>
+          <p class="place__url-heading">URL</p>
           <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" 
-            class="place__website place__website_link" target="_blank">Facebook</a>
+            class="place__link" target="_blank">Facebook</a>
         </div>
         <div class="place__text">
           <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
@@ -109,8 +109,8 @@
         <h2 class="place__title">Зимний Байкал</h2>
         <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Лёд Байкала">
         <div class="place__website">
-          <p class="place__website place__website_url-heading">URL</p>
-          <a href="https://vk.com/baikalmile" class="place__website place__website_link" target="_blank">https://vk.com/baikalmile</a>
+          <p class="place__url-heading">URL</p>
+          <a href="https://vk.com/baikalmile" class="place__link" target="_blank">https://vk.com/baikalmile</a>
         </div>
         <div class="place__text">
           <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
@@ -127,8 +127,8 @@
         <h2 class="place__title">Карелия</h2>
         <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия">
         <div class="place__website">
-          <p class="place__website_url-heading">URL</p>
-          <a href="http://vodlozero.ru" class="place__website_link" target="_blank">http://vodlozero.ru/</a>
+          <p class="place__url-heading">URL</p>
+          <a href="http://vodlozero.ru" class="place__link" target="_blank">http://vodlozero.ru/</a>
         </div>
           <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: 
             образующая тайгу сибирская лиственница не растёт западнее Водлозера. 
